Still to review version

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
 	<link href="style.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
 
@@ -95,7 +97,7 @@
 
 <!--- Sezione "Il progetto" -->
 <section id="progetto">
-<div class="row welcome text-center">
+<div class="row text-center">
 	<div class="col-12">
 		<h1 class="display-4">	Il progetto</h1>
 		<hr>
@@ -107,10 +109,8 @@
   <div class="container py-3">
     <div class="card" style="border:none;">
       <div class="row ">
-
           <div class="col-md-8 px-3">
             <div class="card-block px-3">
-							<br>
               <p class="card-text">
 								Osteopatia Brambilla nasce dall’esigenza di mettere a disposizione di tutti le conoscenze e gli insegnamenti appresi
 			 					durante gli anni di formazione in osteopatia al fine di valutare e trattare in modo efficace i disturbi riferiti dai pazienti.
@@ -151,7 +151,7 @@
 							<p> <i class="fa fa-clock  body-icons"></i> Lunedi - Venerdì: 9.00 - 18.00 </p>
 							<p>	 <i class="fa fa-home body-icons"></i>  Via Garibaldi 23, 20061 Carugate (MI)</p>
 							<br>
-							<a href="#" class="btn btn-primary"> Contattaci </a>
+							<a href="contact.html" class="btn btn-primary"> Contattaci </a>
 					 </div>
           </div>
 					<div class="col-md-6">
@@ -179,13 +179,14 @@
 				<p>	P.iva 10529990961</p>
 				<p> osteopatiabrambilla@gmail.com</p>
 
-				<i class="fab fa-facebook circle"></i>
-				<i class="fab fa-twitter circle"></i>
-				<i class="fab fa-instagram circle"></i>
+				<a href="#" class="circle fab fa-facebook icon-footer" style="width: 40px; height: 40px; padding:10px;"></a>
+				<a href="#" class="circle fab fa-twitter icon-footer" style="width: 40px; height: 40px;padding:10px;"></a>
+				<a href="#" class="circle fab fa-instagram icon-footer" style="width: 40px; height: 40px;padding:10px;"></a>
+
 			</div>
 		</div>
 		</div>
-			<div class="col-12 text-center">
+			<div class="col-12 text-center" style="padding-bottom:10px;">
 				<hr class="light-100">
 				<h5>&copy; web4friends </h5>
 			</div>
@@ -196,7 +197,7 @@
 <script>
 function myMap() {
 var mapProp= {
-    center:new google.maps.LatLng(45.5502647,9.383622),
+    center:new google.maps.LatLng(45.552158,9.339623),
     zoom:13,
 };
 var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
@@ -218,34 +219,6 @@ $(function(){
 });
 </script>
 
-
-<script>
-	$("#sendMessage").on("click", function() {
-	  // message = $("#contactform").serialize();
-		//get the name field value
-		var nome = $('#nome').val();
-		//get the surname field value
-		var cognome = $('#cognome').val();
-		//get the email field value
-		var email = $('#email').val();
-		//get the telephone field value
-		var telefono = $('#telefono').val();
-		//get the subject field value
-		var contenuto = $('#contenuto').val();
-	    $.ajax({
-	        url: "//formspree.io/spreafico95@hotmail.it",
-	        method: "POST",
-	        data: {nome: nome,
-								cognome: cognome,
-								email: email,
-								telefono: telefono,
-								contenuto: contenuto},
-	        dataType: "json"
-	    });
-	    alert('Grazie per averci contattato, ti contatteremo il prima possibile!');
-	    return false;
-	});
-</script>
 
 </body>
 </html>
