--- a/services.html
+++ b/services.html
@@ -61,8 +61,8 @@
 
           <div class="col-md-8 px-3">
             <div class="card-block px-3">
-							<br>
               <p class="card-text">
+								<br>
 								Osteopatia Brambilla nasce dall’esigenza di mettere a disposizione di tutti le conoscenze e gli insegnamenti appresi
 			 					durante gli anni di formazione in osteopatia al fine di valutare e trattare in modo efficace i disturbi riferiti dai pazienti.
 							</p>
@@ -117,13 +117,14 @@
 				<p>	P.iva 10529990961</p>
 				<p> osteopatiabrambilla@gmail.com</p>
 
-				<i class="fab fa-facebook circle"></i>
-				<i class="fab fa-twitter circle"></i>
-				<i class="fab fa-instagram circle"></i>
+				<a href="#" class="circle fab fa-facebook icon-footer" style="width: 40px; height: 40px; padding:10px;"></a>
+				<a href="#" class="circle fab fa-twitter icon-footer" style="width: 40px; height: 40px;padding:10px;"></a>
+				<a href="#" class="circle fab fa-instagram icon-footer" style="width: 40px; height: 40px;padding:10px;"></a>
+
 			</div>
 		</div>
 		</div>
-			<div class="col-12 text-center">
+			<div class="col-12 text-center" style="padding-bottom:10px;">
 				<hr class="light-100">
 				<h5>&copy; web4friends </h5>
 			</div>
