--- a/contact.html
+++ b/contact.html
@@ -54,40 +54,53 @@
   <div class="container py-3">
     <div class="card" style="border:none;">
       <div class="row ">
-          <div class="col-md-6 px-3">
-            <div class="card-block px-3">
 
-							<form>
+				<div class="col-md-5 px-3">
+					<h2 class="display-4" style="text-align:center;">	Dubbi o domande? Contattaci ora!</h2>
+					<form>
+						<hr class="light-100">
+						<div class="form-group">
+							<label for="nome"> Nome </label>
+							<input type="text" class="form-control" id="nome" placeholder="Il tuo nome..">
+						</div>
 
-							  <div class="form-group">
-							    <label for="nome"> Nome </label>
-							    <input type="text" class="form-control" id="nome" placeholder="Il tuo nome..">
-							  </div>
+						<div class="form-group">
+							<label for="cognome"> Cognome </label>
+							<input type="text" class="form-control" id="cognome" placeholder="Il tuo cognome..">
+						</div>
 
-								<div class="form-group">
-							    <label for="cognome"> Cognome </label>
-							    <input type="text" class="form-control" id="cognome" placeholder="Il tuo cognome..">
-							  </div>
+						<div class="form-group">
+							<label for="telefono"> Telefono </label>
+							<input type="text" class="form-control" id="telefono" placeholder="Il tuo telefono..">
+						</div>
 
-								<div class="form-group">
-									<label for="telefono"> Telefono </label>
-									<input type="number" class="form-control" id="telefono" placeholder="Il tuo telefono..">
-								</div>
+						<div class="form-group">
+							<label for="email"> Email </label>
+							<input type="email" class="form-control" id="email" placeholder="La tua email..">
+						</div>
 
-								<div class="form-group">
-									<label for="email"> Email </label>
-									<input type="email" class="form-control" id="email" placeholder="La tua email..">
-								</div>
+						<div class="form-group">
+							<label for="exampleFormControlTextarea1">Contenuto </label>
+							<textarea class="form-control" id="contenuto" rows="4" placeholder="Il contenuto del messaggio.."></textarea>
+						</div>
 
-								<button id="sendMessage" class="btn btn-primary">Send</button>
-							</form>
+						<button id="sendMessage" class="btn btn-primary">Inviare </button>
+					</form>
+			 </div>
 
-					 </div>
-          </div>
-					<div class="col-md-6">
-						<div id="googleMap" style="width:100%;height:400px;">	</div>
-					</div>
+			<div class="offset-md-2 col-md-5 px-3">
+					<h2 class="display-4" style="text-align:center;">	I nostri contatti</h2>
+					<hr class="light-100">
+					<p>	<i class="fa fa-phone body-icons"></i>  349-1992353 </p>
+					<p> <i class="fa fa-envelope body-icons"></i>  osteopatiabrambilla@gmail.com</p>
+					<p> <i class="fa fa-clock  body-icons"></i> Lunedi - Venerdì: 9.00 - 18.00 </p>
+					<p>	 <i class="fa fa-home body-icons"></i>  Via Garibaldi 23, 20061 Carugate (MI)</p>
+					<br>
+					<div id="googleMap" style="width:100%;height:400px;">	</div>
+		 </div>
 
+
+		 </div>
         </div>
       </div>
     </div>
@@ -109,13 +122,14 @@
 				<p>	P.iva 10529990961</p>
 				<p> osteopatiabrambilla@gmail.com</p>
 
-				<i class="fab fa-facebook circle"></i>
-				<i class="fab fa-twitter circle"></i>
-				<i class="fab fa-instagram circle"></i>
+				<a href="#" class="circle fab fa-facebook icon-footer" style="width: 40px; height: 40px; padding:10px;"></a>
+				<a href="#" class="circle fab fa-twitter icon-footer" style="width: 40px; height: 40px;padding:10px;"></a>
+				<a href="#" class="circle fab fa-instagram icon-footer" style="width: 40px; height: 40px;padding:10px;"></a>
+
 			</div>
 		</div>
 		</div>
-			<div class="col-12 text-center">
+			<div class="col-12 text-center" style="padding-bottom:10px;">
 				<hr class="light-100">
 				<h5>&copy; web4friends </h5>
 			</div>
@@ -127,7 +141,7 @@
 <script>
 function myMap() {
 var mapProp= {
-    center:new google.maps.LatLng(45.5502647,9.383622),
+    center:new google.maps.LatLng(45.552158,9.339623),
     zoom:13,
 };
 var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
@@ -148,5 +162,34 @@ $(function(){
 		});
 });
 </script>
+
+<script>
+	$("#sendMessage").on("click", function() {
+	  // message = $("#contactform").serialize();
+		//get the name field value
+		var nome = $('#nome').val();
+		//get the surname field value
+		var cognome = $('#cognome').val();
+		//get the email field value
+		var email = $('#email').val();
+		//get the telephone field value
+		var telefono = $('#telefono').val();
+		//get the subject field value
+		var contenuto = $('#contenuto').val();
+	    $.ajax({
+	        url: "//formspree.io/spreafico95@hotmail.it",
+	        method: "POST",
+	        data: {nome: nome,
+								cognome: cognome,
+								email: email,
+								telefono: telefono,
+								contenuto: contenuto},
+	        dataType: "json"
+	    });
+	    alert('Grazie per averci contattato, ti contatteremo il prima possibile!');
+	    return false;
+	});
+</script>
+
 </body>
 </html>
