--- a/blog.html
+++ b/blog.html
@@ -57,21 +57,25 @@
 		<div class="row">
 			<div class="col-md-4">
 				<div class="card">
-					<img class="card-img-top" src="img/internet.jpg">  <!--- Insert here your first team member card image -->
+					<img class="card-img-top" src="img/slides2.jpg">  <!--- Insert here your first team member card image -->
 					<div class="card-body">
-						<h4 class="card-title"> Our new website is up! </h4> <!--- Insert here your first article title -->
-						<p class="card-text"> Description of the first article! </p> <!--- Insert here your first article  description --->
-						<a href="articles/article1.html" class="btn btn-outline-secondary"> See More </a>
+						<h4 class="card-title"> Cos'è l'Osteopatia? </h4> <!--- Insert here your first article title -->
+						<p class="card-text">
+							L’osteopatia è una medicina manuale complementare che, attraverso un approccio globale, si
+							occupa della valutazione e del trattamento di disturbi funzionali relativi all’ apparato locomotore e
+							viscerale. <br>
+							La visita osteopatica si prefigge l’ obiettivo di ...
+						</p> <!--- Insert here your first article  description --->
+						<a href="articles/article1.html" class="btn btn-outline-secondary"> Scopri di più </a>
 					</div>
 				</div>
 			</div>
-
+<!---
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" src="img/services.jpg">  <!--- Insert here your secondarticlecard image -->
 						<div class="card-body">
-							<h4 class="card-title"> Wow, one more article! </h4> <!--- Insert here your second article name  -->
-							<p class="card-text"> Description of the second article! </p> <!--- Insert here your secondarticle description -->
+							<h4 class="card-title"> Wow, one more article! </h4>
+							<p class="card-text"> Description of the second article! </p> <
 							<a href="articles/article2.html" class="btn btn-outline-secondary"> See More </a>
 						</div>
 					</div>
@@ -79,41 +83,16 @@
 
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" src="img/mac.png">  <!--- Insert here your third article card image -->
+						<img class="card-img-top" src="img/mac.png">
 						<div class="card-body">
-							<h4 class="card-title"> Intereting article... </h4> <!--- Insert here your third article name -->
-							<p class="card-text"> Description of the third article! </p> <!--- Insert here your third article description -->
+							<h4 class="card-title"> Intereting article... </h4>
+							<p class="card-text"> Description of the third article! </p>
 							<a href="articles/article3.html" class="btn btn-outline-secondary"> See Profile </a>
 						</div>
 					</div>
 				</div>
 		</div>
-	</div>
-	<div class="container-fluid-padding">
-		<div class="row">
-			<div class="col-md-4">
-				<div class="card">
-					<img class="card-img-top" src="img/internet.jpg">  <!--- Insert here your first team member card image -->
-					<div class="card-body">
-						<h4 class="card-title"> Our new website is up! </h4> <!--- Insert here your first article title -->
-						<p class="card-text"> Description of the first article! </p> <!--- Insert here your first article  description --->
-						<a href="articles/article1.html" class="btn btn-outline-secondary"> See More </a>
-					</div>
-				</div>
-			</div>
-
-				<div class="col-md-4">
-					<div class="card">
-						<img class="card-img-top" src="img/services.jpg">  <!--- Insert here your secondarticlecard image -->
-						<div class="card-body">
-							<h4 class="card-title"> Wow, one more article! </h4> <!--- Insert here your second article name  -->
-							<p class="card-text"> Description of the second article! </p> <!--- Insert here your secondarticle description -->
-							<a href="articles/article2.html" class="btn btn-outline-secondary"> See More </a>
-						</div>
-					</div>
-				</div>
-
-		</div>
+		 -->
 	</div>
 </section>
 
@@ -138,7 +117,7 @@
 
 				<a href="#" class="circle fab fa-facebook icon-footer" style="width: 40px; height: 40px; padding:10px;"></a>
 				<a href="#" class="circle fab fa-twitter icon-footer" style="width: 40px; height: 40px;padding:10px;"></a>
-				<a href="#" class="circle fab fa-instagram icon-footer" style="width: 40px; height: 40px;padding:10px;"></a>
+				<a href="https://www.instagram.com/osteopatiabrambilla/" class="circle fab fa-instagram icon-footer" style="width: 40px; height: 40px;padding:10px;"> </a>
 
 			</div>
 		</div>
