--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@
 
 				<a href="#" class="circle fab fa-facebook icon-footer" style="width: 40px; height: 40px; padding:10px;"></a>
 				<a href="#" class="circle fab fa-twitter icon-footer" style="width: 40px; height: 40px;padding:10px;"></a>
-				<a href="#" class="circle fab fa-instagram icon-footer" style="width: 40px; height: 40px;padding:10px;"></a>
+				<a href="https://www.instagram.com/osteopatiabrambilla/" class="circle fab fa-instagram icon-footer" style="width: 40px; height: 40px;padding:10px;"> </a>
 
 			</div>
 		</div>
