--- a/index.html
+++ b/index.html
@@ -64,23 +64,23 @@
 		<div class="carousel-item active">
 			<img src="img/slides1.jpg"> <!------------>
 			<div class="carousel-caption">
-				<h1 class="display-2"> Sliders </h1>
-				<h3> Complete website layout </h3>
-				<button type="button" class="btn btn-outline-light btn-lg">View More </button>
+				<!--<h1 class="display-2"> Sliders </h1>
+					 <h3> Complete website layout </h3>
+				<button type="button" class="btn btn-outline-light btn-lg">View More </button>-->
 			</div>
 		</div>
 		<div class="carousel-item">
 			<img src="img/slides3.jpg"> <!------------>
-			<div class="carousel-caption">
-				<h1 class="display-2"> Some text </h1>
-				<button type="button" class="btn btn-primary btn-lg">Link to article</button>
+			<div class="carousel-caption" align="left">
+				<!-- <h1 class="display-2"> Some text </h1> -->
+					<a href="services.html" class="btn btn-primary"> Scopri di più </a>
 			</div>
 		</div>
 		<div class="carousel-item">
 			<img src="img/slides2.jpg"> <!------------>
-			<div class="carousel-caption">
-				<h1 class="display-2"> Some text  </h1>
-				<button type="button" class="btn btn-primary btn-lg">See more</button>
+			<div class="carousel-caption-two">
+					<!-- <h1 class="display-2"> Some text  </h1>-->
+			<a href="articles/article1.html" class="btn btn-primary"> Scopri di più </a>
 			</div>
 		</div>
 	</div>
@@ -181,7 +181,7 @@
 
 				<a href="#" class="circle fab fa-facebook icon-footer" style="width: 40px; height: 40px; padding:10px;"></a>
 				<a href="#" class="circle fab fa-twitter icon-footer" style="width: 40px; height: 40px;padding:10px;"></a>
-				<a href="#" class="circle fab fa-instagram icon-footer" style="width: 40px; height: 40px;padding:10px;"></a>
+				<a href="https://www.instagram.com/osteopatiabrambilla/" class="circle fab fa-instagram icon-footer" style="width: 40px; height: 40px;padding:10px;"> </a>
 
 			</div>
 		</div>
