--- a/services.html
+++ b/services.html
@@ -90,13 +90,13 @@
 	<br>
 		<div class="row text-center">
 			<div class="col-md-4 col-12">
-				<img src="img/slides1.jpg"  width="80%">
+				<img src="img/slides2.jpg"  width="90%">
 	    </div>
 			<div class="col-md-4 col-12">
-				<img src="img/slides1.jpg" width="90%">
+				<img src="img/slides1.jpg" width="95%">
 			</div>
 			<div class="col-md-4 col-12">
-				<img src="img/slides1.jpg" width="80%">
+				<img src="img/slides3.jpg" width="90%">
 			</div>
 		</div>
 </section>
@@ -119,7 +119,7 @@
 
 				<a href="#" class="circle fab fa-facebook icon-footer" style="width: 40px; height: 40px; padding:10px;"></a>
 				<a href="#" class="circle fab fa-twitter icon-footer" style="width: 40px; height: 40px;padding:10px;"></a>
-				<a href="#" class="circle fab fa-instagram icon-footer" style="width: 40px; height: 40px;padding:10px;"></a>
+				<a href="https://www.instagram.com/osteopatiabrambilla/" class="circle fab fa-instagram icon-footer" style="width: 40px; height: 40px;padding:10px;"> </a>
 
 			</div>
 		</div>
