--- a/index.html
+++ b/index.html
@@ -71,19 +71,20 @@
 		</div>
 		<div class="carousel-item">
 			<img src="img/slides3.jpg"> <!------------>
-			<div class="carousel-caption" align="left">
+			<div class="carousel-caption carousel-pos-button-one">
 				<!-- <h1 class="display-2"> Some text </h1> -->
 					<a href="services.html" class="btn btn-primary"> Scopri di più </a>
 			</div>
 		</div>
 		<div class="carousel-item">
 			<img src="img/slides2.jpg"> <!------------>
-			<div class="carousel-caption-two">
-					<!-- <h1 class="display-2"> Some text  </h1>-->
-			<a href="articles/article1.html" class="btn btn-primary"> Scopri di più </a>
+			<div class="carousel-caption carousel-pos-button-two">
+				<!-- <h1 class="display-2"> Some text </h1> -->
+					<a href="articles/article1.html" class="btn btn-primary"> Scopri di più </a>
 			</div>
 		</div>
 	</div>
+
 	<a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
 	<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 	</a>
@@ -179,10 +180,11 @@
 				<p>	P.iva 10529990961</p>
 				<p> osteopatiabrambilla@gmail.com</p>
 
-				<a href="#" class="circle fab fa-facebook icon-footer" style="width: 40px; height: 40px; padding:10px;"></a>
-				<a href="#" class="circle fab fa-twitter icon-footer" style="width: 40px; height: 40px;padding:10px;"></a>
-				<a href="https://www.instagram.com/osteopatiabrambilla/" class="circle fab fa-instagram icon-footer" style="width: 40px; height: 40px;padding:10px;"> </a>
-
+				<a href="#" class="circle fab fa-facebook icon-footer" style="width: 40px; height: 40px; padding:10px;"> </a>
+				<a href="#" class="circle fab fa-twitter icon-footer" style="width: 40px; height: 40px;padding:10px;"> </a>
+				<a href="https://www.instagram.com/osteopatiabrambilla/" >
+					<img src=""class="circle fab fa-instagram icon-footer" style="width: 40px; height: 40px;padding:10px;">
+				</a>
 			</div>
 		</div>
 		</div>
