--- a/Home.html
+++ b/Home.html
@@ -24,9 +24,9 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light navbar-static-top">
 	<div class="container-fluid">
 																	<!-- Add here your logo -->
-		<a class="navbar-brand" href="#slides">
-			<img class="nav-logo" src="img/logo.png">
-		<a/>
+																	<a class="navbar-brand" href="Home.html">
+																		<img class="nav-logo" src="img/logo.png">
+																	</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -34,16 +34,16 @@
 				<ul class="navbar-nav ml-auto">
 					<!-- Add here your list of buttons for the navigation bar -->
 					<li class="nav-item active">
-						<a class="nav-link" href="index.html">Home</a>
+						<a class="nav-link" href="Home.html">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="services.html">Progetto</a>
+						<a class="nav-link" href="Progetto.html">Progetto</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="blog.html">Blog</a>
+						<a class="nav-link" href="Blog.html">Blog</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="contact.html">Contatti</a>
+						<a class="nav-link" href="Contatti.html">Contatti</a>
 					</li>
 				</ul>
 			</div>
@@ -70,17 +70,17 @@
 			</div>
 		</div>
 		<div class="carousel-item">
-			<img src="img/slides3.jpg"> <!------------>
+			<img src="img/osteopatia.jpg"> <!------------>
 			<div class="carousel-caption carousel-pos-button-one">
 				<!-- <h1 class="display-2"> Some text </h1> -->
-					<a href="services.html" class="btn btn-primary"> Scopri di più </a>
+					<a href="articles/article1.html" class="btn btn-primary"  style="width: 20%;" > Scopri di più </a>
 			</div>
 		</div>
 		<div class="carousel-item">
-			<img src="img/slides2.jpg"> <!------------>
-			<div class="carousel-caption carousel-pos-button-two">
+			<img src="img/visita.jpg"> <!------------>
+			<div class="carousel-caption carousel-pos-button-two ">
 				<!-- <h1 class="display-2"> Some text </h1> -->
-					<a href="articles/article1.html" class="btn btn-primary"> Scopri di più </a>
+				<a href="articles/article2.html" class="btn btn-primary"  style="width: 20%;" > Scopri di più </a>
 			</div>
 		</div>
 	</div>
@@ -94,6 +94,9 @@
 </div>
 
 <br>
+
+
+
 <hr class="thick">
 
 <!--- Sezione "Il progetto" -->
@@ -109,22 +112,23 @@
 <section>
   <div class="container py-3">
     <div class="card" style="border:none;">
-      <div class="row ">
+			<div class="row align-items-center">
           <div class="col-md-8 px-3">
-            <div class="card-block px-3">
+            <div class="card-block px-3" style="border:none;">
               <p class="card-text">
 								Osteopatia Brambilla nasce dall’esigenza di mettere a disposizione di tutti le conoscenze e gli insegnamenti appresi
 			 					durante gli anni di formazione in osteopatia al fine di valutare e trattare in modo efficace i disturbi riferiti dai pazienti.
 							</p>
 							<p class="card-text">
 							La peculiarità della visita osteopatica risiede nell’inquadramento e nella gestione della sintomatologia, attraverso una visione
-							globale e olistica del funzionamento del corpo. Ciò permette di avere una maggior efficacia nella valutazione e nel trattamento del disturbo esaminato.
+							globale e del funzionamento del corpo. <br><br>
+							Ciò permette di avere una maggior efficacia nella valutazione e nel trattamento del disturbo esaminato.
 							L’obiettivo è di dedicare professionalità, passione e accuratezza al servizio dei pazienti, dal bambino all’anziano.
 							</p>
 						 </div>
           </div>
 					<div class="col-md-4">
-							<img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=400%C3%97400&w=400&h=400" class="w-100">
+							<img src="img/particolare.jpeg" class="w-100">
 					</div>
 
         </div>
@@ -143,18 +147,36 @@
 <section>
   <div class="container py-3">
     <div class="card" style="border:none;">
-      <div class="row ">
+			<div class="row align-items-center">
           <div class="col-md-6 px-3">
             <div class="card-block px-3">
-							<p> <b> Luca Brambilla </b> </p>
-							<br>
+							<p> <b> Luca Brambilla D.O. </b> <br> Membro Roi n° 4366 </p>
 							<p>	<i class="fa fa-phone body-icons"> </i> 349-1992353 </p>
-							<p> <i class="fa fa-clock  body-icons"></i> Lunedi - Venerdì: 9.00 - 18.00 </p>
+							<p> <i class="fa fa-envelope body-icons"></i>  osteopatiabrambilla@gmail.com</p>
 							<p>	 <i class="fa fa-home body-icons"></i>  Via Garibaldi 23, 20061 Carugate (MI)</p>
+							<!-- <i class="fa fa-clock  body-icons"> </i> -->
+							<hr>
+						 <div class="row">
+				          <div class="col-md-6">
+										  <div class="card-block">
+										<b> Lunedi - Venerdì: </b> <br>
+										 Mattino 09:00 - 12:00 <br>
+										Pomeriggio 14:00 - 19:00 <br>
+											</div>
+									</div>
+
+									<div class="col-md-6">
+											<div class="card-block">
+											 <b> Sabato: </b> <br>
+											 Mattino 09:00 - 12:00
+											</div>
+									</div>
+						</div>
+						<hr>
 							<br>
-							<a href="contact.html" class="btn btn-primary"> Contattaci </a>
+							<a href="Contatti.html" class="btn btn-primary"> Contattaci </a>
 					 </div>
-          </div>
+				 </div>
 					<div class="col-md-6">
 						<div id="googleMap" style="width:100%;height:400px;">	</div>
 					</div>
@@ -167,7 +189,7 @@
 <br><hr class="thick">
 
 <!--- Footer -->
-<section id="contact">
+<section id="Contatti">
 <footer>
 	<div class="container-fluid padding">
 		<div class="row">
@@ -180,18 +202,24 @@
 				<p>	P.iva 10529990961</p>
 				<p> osteopatiabrambilla@gmail.com</p>
 
-				<a href="#" class="circle fab fa-facebook icon-footer" style="width: 40px; height: 40px; padding:10px;"> </a>
+				<!-- Social Media links -->
+				<a href="https://www.facebook.com/osteopatiabrambilla/" >
+					<img src=""class="circle fab fa-facebook icon-footer" style="width: 40px; height: 40px;padding:10px;">
+				</a>
 				<a href="#" class="circle fab fa-twitter icon-footer" style="width: 40px; height: 40px;padding:10px;"> </a>
 				<a href="https://www.instagram.com/osteopatiabrambilla/" >
 					<img src=""class="circle fab fa-instagram icon-footer" style="width: 40px; height: 40px;padding:10px;">
 				</a>
 			</div>
+
 		</div>
 		</div>
+
 			<div class="col-12 text-center" style="padding-bottom:10px;">
 				<hr class="light-100">
 				<h5>&copy; web4friends </h5>
 			</div>
+
 		</div>
 </footer>
 </section>
