--- a/Progetto.html
+++ b/Progetto.html
@@ -21,9 +21,9 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light navbar-static-top">
 	<div class="container-fluid">
 																	<!-- Add here your logo -->
-		<a class="navbar-brand" href="#slides">
+		<a class="navbar-brand" href="Home.html">
 			<img class="nav-logo" src="img/logo.png">
-		<a/>
+		</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -31,16 +31,16 @@
 				<ul class="navbar-nav ml-auto">
 					<!-- Add here your list of buttons for the navigation bar -->
 					<li class="nav-item">
-						<a class="nav-link" href="index.html">Home</a>
+						<a class="nav-link" href="Home.html">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link active" href="services.html">Progetto</a>
+						<a class="nav-link active" href="Progetto.html">Progetto</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="blog.html">Blog</a>
+						<a class="nav-link" href="Blog.html">Blog</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="contact.html">Contatti</a>
+						<a class="nav-link" href="Contatti.html">Contatti</a>
 					</li>
 				</ul>
 			</div>
@@ -49,38 +49,39 @@
 
 
 
-
 <div class="bodyIntro">
 	<h1 class="display-4 intro"> Progetto </h1>
 </div>
+
+
+<br>
+
 <!--- Sezione "Il progetto" -->
 <section>
   <div class="container py-3">
     <div class="card" style="border:none;">
-      <div class="row ">
-
+			<div class="row align-items-center">
           <div class="col-md-8 px-3">
-            <div class="card-block px-3">
+            <div class="card-block px-3" style="border:none;">
               <p class="card-text">
-								<br>
 								Osteopatia Brambilla nasce dall’esigenza di mettere a disposizione di tutti le conoscenze e gli insegnamenti appresi
 			 					durante gli anni di formazione in osteopatia al fine di valutare e trattare in modo efficace i disturbi riferiti dai pazienti.
 							</p>
 							<p class="card-text">
 							La peculiarità della visita osteopatica risiede nell’inquadramento e nella gestione della sintomatologia, attraverso una visione
-							globale e olistica del funzionamento del corpo. Ciò permette di avere una maggior efficacia nella valutazione e nel trattamento del disturbo esaminato.
+							globale e del funzionamento del corpo. <br><br>
+							Ciò permette di avere una maggior efficacia nella valutazione e nel trattamento del disturbo esaminato.
 							L’obiettivo è di dedicare professionalità, passione e accuratezza al servizio dei pazienti, dal bambino all’anziano.
 							</p>
 						 </div>
           </div>
 					<div class="col-md-4">
-							<img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=400%C3%97400&w=400&h=400" class="w-100">
+							<img src="img/particolare.jpeg" class="w-100">
 					</div>
 
         </div>
       </div>
     </div>
-  </div>
 </section>
 
 <br><hr class="thick">
@@ -90,21 +91,22 @@
 	<br>
 		<div class="row text-center">
 			<div class="col-md-4 col-12">
-				<img src="img/slides2.jpg"  width="90%">
+				<img src="img/osteopatia.jpg"  width="90%">
 	    </div>
 			<div class="col-md-4 col-12">
 				<img src="img/slides1.jpg" width="95%">
 			</div>
 			<div class="col-md-4 col-12">
-				<img src="img/slides3.jpg" width="90%">
+				<img src="img/visita.jpg" width="90%">
 			</div>
 		</div>
 </section>
 
 <br><hr class="thick">
 
+
 <!--- Footer -->
-<section id="contact">
+<section id="Contatti">
 <footer>
 	<div class="container-fluid padding">
 		<div class="row">
@@ -117,17 +119,24 @@
 				<p>	P.iva 10529990961</p>
 				<p> osteopatiabrambilla@gmail.com</p>
 
-				<a href="#" class="circle fab fa-facebook icon-footer" style="width: 40px; height: 40px; padding:10px;"></a>
-				<a href="#" class="circle fab fa-twitter icon-footer" style="width: 40px; height: 40px;padding:10px;"></a>
-				<a href="https://www.instagram.com/osteopatiabrambilla/" class="circle fab fa-instagram icon-footer" style="width: 40px; height: 40px;padding:10px;"> </a>
-
+				<!-- Social Media links -->
+				<a href="https://www.facebook.com/osteopatiabrambilla/" >
+					<img src=""class="circle fab fa-facebook icon-footer" style="width: 40px; height: 40px;padding:10px;">
+				</a>
+				<a href="#" class="circle fab fa-twitter icon-footer" style="width: 40px; height: 40px;padding:10px;"> </a>
+				<a href="https://www.instagram.com/osteopatiabrambilla/" >
+					<img src=""class="circle fab fa-instagram icon-footer" style="width: 40px; height: 40px;padding:10px;">
+				</a>
 			</div>
+
 		</div>
 		</div>
+
 			<div class="col-12 text-center" style="padding-bottom:10px;">
 				<hr class="light-100">
 				<h5>&copy; web4friends </h5>
 			</div>
+
 		</div>
 </footer>
 </section>
