--- a/blog.html
+++ b/blog.html
@@ -21,9 +21,9 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light navbar-static-top">
 	<div class="container-fluid">
 																	<!-- Add here your logo -->
-		<a class="navbar-brand" href="#slides">
-			<img class="nav-logo" src="img/logo.png">
-		<a/>
+			<a class="navbar-brand" href="Home.html">
+				<img class="nav-logo" src="img/logo.png">
+			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -31,16 +31,16 @@
 				<ul class="navbar-nav ml-auto">
 					<!-- Add here your list of buttons for the navigation bar -->
 					<li class="nav-item">
-						<a class="nav-link" href="index.html">Home</a>
+						<a class="nav-link" href="Home.html">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="services.html">Progetto</a>
+						<a class="nav-link" href="Progetto.html">Progetto</a>
 					</li>
 					<li class="nav-item active">
-						<a class="nav-link" href="blog.html">Blog</a>
+						<a class="nav-link" href="Blog.html">Blog</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link active" href="contact.html">Contatti</a>
+						<a class="nav-link" href="Contatti.html">Contatti</a>
 					</li>
 				</ul>
 			</div>
@@ -57,7 +57,7 @@
 		<div class="row">
 			<div class="col-md-4">
 				<div class="card">
-					<img class="card-img-top" src="img/slides2.jpg">  <!--- Insert here your first team member card image -->
+					<img class="card-img-top" src="img/osteopatia.jpg">  <!--- Insert here your first team member card image -->
 					<div class="card-body">
 						<h4 class="card-title"> Cos'è l'Osteopatia? </h4> <!--- Insert here your first article title -->
 						<p class="card-text">
@@ -66,21 +66,26 @@
 							viscerale. <br>
 							La visita osteopatica si prefigge l’ obiettivo di ...
 						</p> <!--- Insert here your first article  description --->
-						<a href="articles/article1.html" class="btn btn-outline-secondary"> Scopri di più </a>
+						<a href="articles/Osteopatia.html" class="btn btn-outline-secondary"> Scopri di più </a>
 					</div>
 				</div>
 			</div>
-<!---
+
 				<div class="col-md-4">
 					<div class="card">
+						<img class="card-img-top" src="img/visita.jpg">  <!--- Insert here your first team member card image -->
 						<div class="card-body">
-							<h4 class="card-title"> Wow, one more article! </h4>
-							<p class="card-text"> Description of the second article! </p> <
-							<a href="articles/article2.html" class="btn btn-outline-secondary"> See More </a>
+							<h4 class="card-title"> La visita osteopatica </h4> <!--- Insert here your first article title -->
+							<p class="card-text">
+								Il trattamento è rivolto al miglioramento delle capacità adattative dell’ organismo e al ripristino
+								dello stato di salute generale. Ma come avviene nella pratica la visita osteopatica? <br>
+								La visita è suddivisa sostanzialmente in 4 momenti ...
+							</p> <!--- Insert here your first article  description --->
+							<a href="articles/Visita.html" class="btn btn-outline-secondary"> Scopri di più </a>
 						</div>
 					</div>
 				</div>
-
+<!---
 				<div class="col-md-4">
 					<div class="card">
 						<img class="card-img-top" src="img/mac.png">
@@ -101,8 +106,9 @@
 
 <br><hr class="thick">
 
+
 <!--- Footer -->
-<section id="contact">
+<section id="Contatti">
 <footer>
 	<div class="container-fluid padding">
 		<div class="row">
@@ -115,17 +121,24 @@
 				<p>	P.iva 10529990961</p>
 				<p> osteopatiabrambilla@gmail.com</p>
 
-				<a href="#" class="circle fab fa-facebook icon-footer" style="width: 40px; height: 40px; padding:10px;"></a>
-				<a href="#" class="circle fab fa-twitter icon-footer" style="width: 40px; height: 40px;padding:10px;"></a>
-				<a href="https://www.instagram.com/osteopatiabrambilla/" class="circle fab fa-instagram icon-footer" style="width: 40px; height: 40px;padding:10px;"> </a>
-
+				<!-- Social Media links -->
+				<a href="https://www.facebook.com/osteopatiabrambilla/" >
+					<img src=""class="circle fab fa-facebook icon-footer" style="width: 40px; height: 40px;padding:10px;">
+				</a>
+				<a href="#" class="circle fab fa-twitter icon-footer" style="width: 40px; height: 40px;padding:10px;"> </a>
+				<a href="https://www.instagram.com/osteopatiabrambilla/" >
+					<img src=""class="circle fab fa-instagram icon-footer" style="width: 40px; height: 40px;padding:10px;">
+				</a>
 			</div>
+
 		</div>
 		</div>
+
 			<div class="col-12 text-center" style="padding-bottom:10px;">
 				<hr class="light-100">
 				<h5>&copy; web4friends </h5>
 			</div>
+
 		</div>
 </footer>
 </section>
